Fix layout issue on mobile

--- a/style/friseurleistungen.css
+++ b/style/friseurleistungen.css
@@ -102,8 +102,8 @@ h2 {
 @media screen and (min-width: 1px) and (max-width: 899px) {
 	.angebot {
 		margin: 0.5em 0.5em 0.5em 0.5em;
-		min-width: 450px;
-		max-width: 450px;
+		min-width: 90%;
+		max-width: 90%;
 		min-height: 500px;
 	}
 
